<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cerberus.testapp.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:title="@string/action_faq"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        android:title="@string/action_privacy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email_search"
        android:orderInCategory="100"
        android:title="Email/Username Search Example"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste_search"
        android:orderInCategory="100"
        android:title="Paste Search Example"
        app:showAsAction="never" />
</menu>
